--- a/tove.ipynb
+++ b/tove.ipynb
@@ -485,7 +485,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_probability(cpd,data):\n",
+    "\"\"\"def create_probability(cpd,data):\n",
     "    variables = list(cpd.columns)\n",
     "    evidence = data.copy[variables]\n",
     "    total_outcomes = evidence.shape[0]\n",
@@ -494,7 +494,319 @@
     "        fav_outcomes = evidence.copy[var].sum()\n",
     "        prob = fav_outcomes/total_outcomes\n",
     "        \n",
-    "    \n"
+    "    \"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cpd_probs_from_data(cpd,data):\n",
+    "    variables = list(cpd.columns)\n",
+    "    evidence = data[variables]\n",
+    "    total_obs = evidence.shape[0]\n",
+    "    probs = []\n",
+    "    for i in range(0,cpd.shape[0]):\n",
+    "        row = cpd.loc[i:i]\n",
+    "        compare = pd.merge(row,evidence,how='inner')\n",
+    "        prob = compare.shape[0]/total_obs\n",
+    "        probs.append(prob)\n",
+    "    return probs\n",
+    "        \n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Erk</th>\n",
+       "      <th>Mek</th>\n",
+       "      <th>Akt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Erk  Mek  Akt\n",
+       "0    0    0    0\n",
+       "1    0    0    1\n",
+       "2    0    1    0\n",
+       "3    0    1    1\n",
+       "4    1    0    0\n",
+       "5    1    0    1\n",
+       "6    1    1    0\n",
+       "7    1    1    1"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X1 = 'Akt'\n",
+    "X2 = 'Erk'\n",
+    "X3 = 'Mek'\n",
+    "\n",
+    "parents = [X2,X3]\n",
+    "\n",
+    "test1 = create_CPD(X1,parents)\n",
+    "test1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.4794841735052755, 0.03985932004689332, 0.2227432590855803, 0.009378663540445486, 0.04220398593200469, 0.11137162954279015, 0.0246189917936694, 0.07033997655334115]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Erk</th>\n",
+       "      <th>Mek</th>\n",
+       "      <th>Akt</th>\n",
+       "      <th>prob</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.479484</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.039859</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.222743</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.009379</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.042204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.111372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.024619</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.070340</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Erk  Mek  Akt      prob\n",
+       "0    0    0    0  0.479484\n",
+       "1    0    0    1  0.039859\n",
+       "2    0    1    0  0.222743\n",
+       "3    0    1    1  0.009379\n",
+       "4    1    0    0  0.042204\n",
+       "5    1    0    1  0.111372\n",
+       "6    1    1    0  0.024619\n",
+       "7    1    1    1  0.070340"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(cpd_probs_from_data(test1,data))\n",
+    "test1[\"prob\"] = cpd_probs_from_data(test1,data)\n",
+    "test1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cpd_factor(cpd,alpha):\n",
+    "    variables = list(cpd.columns)\n",
+    "    n = len(variables)\n",
+    "    if n == 1:\n",
+    "        factor = alpha # more needed here - add to dataframe \n",
+    "    else:\n",
+    "        child = variables[n-1]\n",
+    "        # restrict to X == 1\n",
+    "        cpd_e = cpd[cpd[f\"{variables[n-1]}\"]==1].copy()\n",
+    "        # generate factor \n",
+    "        parents = cpd_e.iloc[:,:-1].copy()\n",
+    "        parents[\"sum\"] = parents.sum(axis=1)\n",
+    "        cpd_e[\"Factor\"] = 1 - (alpha ** (1 + parents[\"sum\"]))\n",
+    "        return cpd_e\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(test1)\n",
+    "print(test1.iloc[:,:-1])\n",
+    "print(test1[test1[\"Akt\"]==1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Erk  Mek  Akt  Factor\n",
+      "1    0    0    1   0.500\n",
+      "3    0    1    1   0.750\n",
+      "5    1    0    1   0.750\n",
+      "7    1    1    1   0.875\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cpd_factor(test1,0.5))"
    ]
   }
  ],
