--- a/sky.ipynb
+++ b/sky.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import networkx as nx\n",
+    "from itertools import product\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression"
    ]
