--- a/tove.ipynb
+++ b/tove.ipynb
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,6 +642,9 @@
     "    n = len(variables)\n",
     "    if n == 1:\n",
     "        factor = alpha # more needed here - add to dataframe \n",
+    "        cpd_e = cpd[cpd[f\"{variables[n-1]}\"]==1].copy()\n",
+    "        cpd_e[\"Factor\"] = 1 - alpha\n",
+    "        return cpd_e\n",
     "    else:\n",
     "        child = variables[n-1]\n",
     "        # restrict to X == 1\n",
@@ -673,6 +676,79 @@
    ],
    "source": [
     "print(cpd_factor(test1,0.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Akt\n",
+      "0    0\n",
+      "1    1\n",
+      "   Akt  Factor\n",
+      "1    1     0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "test2 = create_CPD(X1,[])\n",
+    "print(test2)\n",
+    "print(cpd_factor(test2,0.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[   Erk  Mek  Akt\n",
+      "0    0    0    0\n",
+      "1    0    0    1\n",
+      "2    0    1    0\n",
+      "3    0    1    1\n",
+      "4    1    0    0\n",
+      "5    1    0    1\n",
+      "6    1    1    0\n",
+      "7    1    1    1]\n",
+      "[   Akt\n",
+      "0    0\n",
+      "1    1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "var_to_elim = \"Mek\"\n",
+    "list_of_factors = [test1,test2]\n",
+    "list_of_factors_with_X = []\n",
+    "list_of_factors_wo_X = []\n",
+    "for factor in list_of_factors:\n",
+    "    if var_to_elim in factor.columns:\n",
+    "        list_of_factors_with_X.append(factor)\n",
+    "    else:\n",
+    "        list_of_factors_wo_X.append(factor)\n",
+    "\n",
+    "print(list_of_factors_with_X)\n",
+    "print(list_of_factors_wo_X)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_of_factors_with_X "
    ]
   }
  ],
