--- a/tove.ipynb
+++ b/tove.ipynb
@@ -680,54 +680,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   Akt\n",
-      "0    0\n",
-      "1    1\n",
-      "   Akt  Factor\n",
-      "1    1     0.5\n"
+      "   PKA  Akt\n",
+      "0    0    0\n",
+      "1    0    1\n",
+      "2    1    0\n",
+      "3    1    1\n",
+      "   PKA  Akt  Factor\n",
+      "1    0    1    0.50\n",
+      "3    1    1    0.75\n"
      ]
     }
    ],
    "source": [
-    "test2 = create_CPD(X1,[])\n",
+    "X4 = \"PKA\"\n",
+    "\n",
+    "test2 = create_CPD(X1,[X4])\n",
     "print(test2)\n",
     "print(cpd_factor(test2,0.5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[   Erk  Mek  Akt\n",
-      "0    0    0    0\n",
-      "1    0    0    1\n",
-      "2    0    1    0\n",
-      "3    0    1    1\n",
-      "4    1    0    0\n",
-      "5    1    0    1\n",
-      "6    1    1    0\n",
-      "7    1    1    1]\n",
-      "[   Akt\n",
-      "0    0\n",
-      "1    1]\n"
+      "[   Erk  Mek  Akt  Factor\n",
+      "1    0    0    1   0.500\n",
+      "3    0    1    1   0.750\n",
+      "5    1    0    1   0.750\n",
+      "7    1    1    1   0.875,    PKA  Akt  Factor\n",
+      "1    0    1    0.50\n",
+      "3    1    1    0.75]\n",
+      "\n",
+      "[]\n"
      ]
     }
    ],
    "source": [
-    "var_to_elim = \"Mek\"\n",
-    "list_of_factors = [test1,test2]\n",
+    "test1f = cpd_factor(test1,0.5)\n",
+    "test2f = cpd_factor(test2,0.5)\n",
+    "\n",
+    "var_to_elim = \"Akt\"\n",
+    "list_of_factors = [test1f,test2f]\n",
     "list_of_factors_with_X = []\n",
     "list_of_factors_wo_X = []\n",
     "for factor in list_of_factors:\n",
@@ -737,6 +742,7 @@
     "        list_of_factors_wo_X.append(factor)\n",
     "\n",
     "print(list_of_factors_with_X)\n",
+    "print(\"\")\n",
     "print(list_of_factors_wo_X)\n",
     "\n",
     "\n"
@@ -744,11 +750,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
-    "list_of_factors_with_X "
+    "def factor_product (factor1,factor2,var_to_elim):\n",
+    "    new_factor = factor1.merge(factor2, how='inner', on=var_to_elim)\n",
+    "    new_factor[\"Factor\"] = new_factor[\"Factor_x\"]*new_factor[\"Factor_y\"]\n",
+    "    new_factor = new_factor.drop(columns=[\"Factor_x\",\"Factor_y\"])\n",
+    "    return new_factor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Erk  Mek  Akt  PKA   Factor\n",
+      "0    0    0    1    0  0.25000\n",
+      "1    0    0    1    1  0.37500\n",
+      "2    0    1    1    0  0.37500\n",
+      "3    0    1    1    1  0.56250\n",
+      "4    1    0    1    0  0.37500\n",
+      "5    1    0    1    1  0.56250\n",
+      "6    1    1    1    0  0.43750\n",
+      "7    1    1    1    1  0.65625\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(factor_product(test1f,test2f,\"Akt\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Erk  Mek  Akt  PKA   Factor\n",
+      "0    0    0    1    0  0.25000\n",
+      "1    0    0    1    1  0.37500\n",
+      "2    0    1    1    0  0.37500\n",
+      "3    0    1    1    1  0.56250\n",
+      "4    1    0    1    0  0.37500\n",
+      "5    1    0    1    1  0.56250\n",
+      "6    1    1    1    0  0.43750\n",
+      "7    1    1    1    1  0.65625\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_of_factors_with_X \n",
+    "factor1 = list_of_factors_with_X[0]\n",
+    "for factor in list_of_factors_with_X[1:]:\n",
+    "    factor1 = factor1.merge(factor, how='inner', on=var_to_elim)\n",
+    "factor1[\"Factor\"] = factor1[\"Factor_x\"]*factor1[\"Factor_y\"]\n",
+    "factor1 = factor1.drop(columns=[\"Factor_x\",\"Factor_y\"])\n",
+    "\n",
+    "#factor1 = factor1.groupby([var_to_elim])\n",
+    "\n",
+    "print(factor1)"
    ]
   }
  ],
