--- a/tove.ipynb
+++ b/tove.ipynb
@@ -708,7 +708,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def var_elim(list_of_factors,var_to_elim):\n",
+    "    list_of_factors_with_X = []\n",
+    "    list_of_factors_wo_X = []\n",
+    "    for factor in list_of_factors:\n",
+    "        if var_to_elim in factor.columns:\n",
+    "            list_of_factors_with_X.append(factor)\n",
+    "        else:\n",
+    "            list_of_factors_wo_X.append(factor)\n",
+    "\n",
+    "    # factor product of list of factors\n",
+    "    \n",
+    "    # sum out variable\n",
+    "    \n",
+    "    # return list_wo_X + tau "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -741,6 +763,7 @@
     "    else:\n",
     "        list_of_factors_wo_X.append(factor)\n",
     "\n",
+    "\n",
     "print(list_of_factors_with_X)\n",
     "print(\"\")\n",
     "print(list_of_factors_wo_X)\n",
@@ -750,12 +773,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
     "def factor_product (factor1,factor2,var_to_elim):\n",
-    "    new_factor = factor1.merge(factor2, how='inner', on=var_to_elim)\n",
+    "    nodes_to_join = factor1.columns.intersection(factor2.columns)\n",
+    "    nodes_to_join = nodes_to_join.drop(\"Factor\")\n",
+    "    nodes = list(nodes_to_join)\n",
+    "    new_factor = factor1.merge(factor2, how='inner', on=nodes)\n",
     "    new_factor[\"Factor\"] = new_factor[\"Factor_x\"]*new_factor[\"Factor_y\"]\n",
     "    new_factor = new_factor.drop(columns=[\"Factor_x\",\"Factor_y\"])\n",
     "    return new_factor"
@@ -763,27 +789,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   Erk  Mek  Akt  PKA   Factor\n",
-      "0    0    0    1    0  0.25000\n",
-      "1    0    0    1    1  0.37500\n",
-      "2    0    1    1    0  0.37500\n",
-      "3    0    1    1    1  0.56250\n",
-      "4    1    0    1    0  0.37500\n",
-      "5    1    0    1    1  0.56250\n",
-      "6    1    1    1    0  0.43750\n",
-      "7    1    1    1    1  0.65625\n"
+      "   Erk  Mek  Akt    Factor\n",
+      "0    0    0    1  0.250000\n",
+      "1    0    1    1  0.562500\n",
+      "2    1    0    1  0.562500\n",
+      "3    1    1    1  0.765625\n"
      ]
     }
    ],
    "source": [
-    "print(factor_product(test1f,test2f,\"Akt\"))"
+    "print(factor_product(test1f,test1f,\"Akt\"))"
    ]
   },
   {
