--- a/tove.ipynb
+++ b/tove.ipynb
@@ -778,9 +778,11 @@
    "outputs": [],
    "source": [
     "def factor_product (factor1,factor2,var_to_elim):\n",
+    "    # Find the common variables in the factors\n",
     "    nodes_to_join = factor1.columns.intersection(factor2.columns)\n",
     "    nodes_to_join = nodes_to_join.drop(\"Factor\")\n",
     "    nodes = list(nodes_to_join)\n",
+    "    # Merge the two factors and multiply the values\n",
     "    new_factor = factor1.merge(factor2, how='inner', on=nodes)\n",
     "    new_factor[\"Factor\"] = new_factor[\"Factor_x\"]*new_factor[\"Factor_y\"]\n",
     "    new_factor = new_factor.drop(columns=[\"Factor_x\",\"Factor_y\"])\n",
