--- a/part_ii.ipynb
+++ b/part_ii.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,8 @@
     "df_x4 = synthetic_cpd(alpha, parents[4])\n",
     "df_x2 = synthetic_cpd(alpha, parents[2])\n",
     "\n",
-    "factor_list = [df_x7, df_x8, df_x1, df_x10, df_x6, df_x9, df_x3, df_x5, df_x11, df_x4, df_x2]"
+    "factor_list_top = [df_x7, df_x8, df_x1, df_x10, df_x6, df_x9, df_x3, df_x5, df_x11, df_x4, df_x2]\n",
+    "factor_list = node_to_index(nodes, factor_list_top)"
    ]
   },
   {
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -100,8 +101,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>9</th>\n",
-       "      <th>8</th>\n",
+       "      <th>7</th>\n",
+       "      <th>10</th>\n",
+       "      <th>6</th>\n",
        "      <th>prob</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -110,39 +112,212 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.250000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.750</td>\n",
+       "      <td>0.375000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.750</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.375000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.875</td>\n",
+       "      <td>0.562500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.562500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.656250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.656250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.765625</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   9  8   prob\n",
-       "0  0  0  0.500\n",
-       "1  0  1  0.750\n",
-       "2  1  0  0.750\n",
-       "3  1  1  0.875"
+       "   7  10  6      prob\n",
+       "0  0   0  0  0.250000\n",
+       "1  0   0  1  0.375000\n",
+       "2  1   0  0  0.375000\n",
+       "3  1   0  1  0.562500\n",
+       "4  0   1  0  0.562500\n",
+       "5  0   1  1  0.656250\n",
+       "6  1   1  0  0.656250\n",
+       "7  1   1  1  0.765625"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def factor_product(factor_1, factor_2):\n",
+    "    nodes_to_join = factor_1.columns.intersection(factor_2.columns)\n",
+    "    nodes_to_join = nodes_to_join.drop(\"prob\")\n",
+    "    nodes = list(nodes_to_join)\n",
+    "\n",
+    "    new_factor = factor_1.merge(factor_2, how='inner', on=nodes)\n",
+    "    new_factor[\"prob\"] = new_factor[\"prob_x\"]*new_factor[\"prob_y\"]\n",
+    "    new_factor = new_factor.drop(columns=[\"prob_x\",\"prob_y\"])\n",
+    "    return new_factor\n",
+    "\n",
+    "factor_product(factor_list_top[4], factor_list_top[5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index([7, 10, 'prob'], dtype='object')\n",
+      "Index([10, 6, 'prob'], dtype='object')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>7</th>\n",
+       "      <th>10</th>\n",
+       "      <th>6</th>\n",
+       "      <th>prob</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.375000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.375000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.562500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.562500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.656250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.656250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.765625</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   7  10  6      prob\n",
+       "0  0   0  0  0.250000\n",
+       "1  0   0  1  0.375000\n",
+       "2  1   0  0  0.375000\n",
+       "3  1   0  1  0.562500\n",
+       "4  0   1  0  0.562500\n",
+       "5  0   1  1  0.656250\n",
+       "6  1   1  0  0.656250\n",
+       "7  1   1  1  0.765625"
+      ]
+     },
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,10 +331,28 @@
     "            lst_scope.append(factor)\n",
     "        else:\n",
     "            lst_not_scope.append(factor)\n",
-    "    return lst_scope[2]\n",
+    "    for elm in lst_scope:\n",
+    "        print(elm.columns)\n",
     "\n",
-    "sum_product_eliminate_var(factor_list, 8)"
+    "    # Multiply all factors in scope\n",
+    "    factor_ = lst_scope[0]\n",
+    "    # print(factor_)\n",
+    "    for i in range(1, len(lst_scope)):\n",
+    "        factor_ = factor_product(factor_, lst_scope[i])\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    return factor_\n",
+    "\n",
+    "sum_product_eliminate_var(factor_list, 10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
