--- a/tove.ipynb
+++ b/tove.ipynb
@@ -708,7 +708,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def factor_product (factor1,factor2):\n",
+    "    # Find the common variables in the factors\n",
+    "    nodes_to_join = factor1.columns.intersection(factor2.columns)\n",
+    "    nodes_to_join = nodes_to_join.drop(\"Factor\")\n",
+    "    nodes = list(nodes_to_join)\n",
+    "    # Merge the two factors and multiply the values\n",
+    "    new_factor = factor1.merge(factor2, how='inner', on=nodes)\n",
+    "    new_factor[\"Factor\"] = new_factor[\"Factor_x\"]*new_factor[\"Factor_y\"]\n",
+    "    new_factor = new_factor.drop(columns=[\"Factor_x\",\"Factor_y\"])\n",
+    "    return new_factor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,15 +740,18 @@
     "            list_of_factors_wo_X.append(factor)\n",
     "\n",
     "    # factor product of list of factors\n",
-    "    \n",
+    "    factor0 = list_of_factors_with_X[0]\n",
+    "    for factor in list_of_factors_with_X[1:]:\n",
+    "        factor0 = factor_product(factor0,factor)\n",
     "    # sum out variable\n",
     "    \n",
-    "    # return list_wo_X + tau "
+    "    # return list_wo_X + tau \n",
+    "    return list_of_factors_wo_X, factor0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -773,25 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def factor_product (factor1,factor2,var_to_elim):\n",
-    "    # Find the common variables in the factors\n",
-    "    nodes_to_join = factor1.columns.intersection(factor2.columns)\n",
-    "    nodes_to_join = nodes_to_join.drop(\"Factor\")\n",
-    "    nodes = list(nodes_to_join)\n",
-    "    # Merge the two factors and multiply the values\n",
-    "    new_factor = factor1.merge(factor2, how='inner', on=nodes)\n",
-    "    new_factor[\"Factor\"] = new_factor[\"Factor_x\"]*new_factor[\"Factor_y\"]\n",
-    "    new_factor = new_factor.drop(columns=[\"Factor_x\",\"Factor_y\"])\n",
-    "    return new_factor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +810,28 @@
     }
    ],
    "source": [
-    "print(factor_product(test1f,test1f,\"Akt\"))"
+    "print(factor_product(test1f,test1f))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "([],    Erk  Mek  Akt    Factor\n",
+      "0    0    0    1  0.250000\n",
+      "1    0    1    1  0.562500\n",
+      "2    1    0    1  0.562500\n",
+      "3    1    1    1  0.765625)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(var_elim([test1f,test1f],\"Akt\"))"
    ]
   },
   {
