--- a/part_ii.ipynb
+++ b/part_ii.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "7  1   1  1  0.765625"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,15 +206,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index([7, 10, 'prob'], dtype='object')\n",
-      "Index([10, 6, 'prob'], dtype='object')\n"
+      "Index([9, 8, 'prob'], dtype='object')\n",
+      "Index([11, 8, 9, 'prob'], dtype='object')\n",
+      "Index([9, 8, 'prob'], dtype='object')\n",
+      "Index([9, 8, 'prob'], dtype='object')\n",
+      "[3, 4, 5, 11]\n"
      ]
     },
     {
@@ -238,9 +241,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>7</th>\n",
-       "      <th>10</th>\n",
-       "      <th>6</th>\n",
+       "      <th>9</th>\n",
+       "      <th>8</th>\n",
+       "      <th>11</th>\n",
        "      <th>prob</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -250,89 +253,93 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.250000</td>\n",
+       "      <td>0.062500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.375000</td>\n",
+       "      <td>0.093750</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.375000</td>\n",
+       "      <td>0.316406</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.562500</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.369141</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.562500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.316406</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.656250</td>\n",
+       "      <td>0.369141</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.656250</td>\n",
+       "      <td>0.586182</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.765625</td>\n",
+       "      <td>0.628052</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   7  10  6      prob\n",
-       "0  0   0  0  0.250000\n",
-       "1  0   0  1  0.375000\n",
-       "2  1   0  0  0.375000\n",
-       "3  1   0  1  0.562500\n",
-       "4  0   1  0  0.562500\n",
-       "5  0   1  1  0.656250\n",
-       "6  1   1  0  0.656250\n",
-       "7  1   1  1  0.765625"
+       "   9  8  11      prob\n",
+       "0  0  0   0  0.062500\n",
+       "1  0  0   1  0.093750\n",
+       "2  0  1   0  0.316406\n",
+       "3  0  1   1  0.369141\n",
+       "4  1  0   0  0.316406\n",
+       "5  1  0   1  0.369141\n",
+       "6  1  1   0  0.586182\n",
+       "7  1  1   1  0.628052"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def sum_product_eliminate_var(factors : list, var : int):\n",
-    "    lst_scope = []   \n",
-    "    lst_not_scope = []\n",
-    "    for factor in factors:\n",
-    "        if var in factor.columns:\n",
-    "            lst_scope.append(factor)\n",
+    "def sum_product_eliminate_var(factors : list, var : int, print_info = False):\n",
+    "    lst_scope = []   # Factors in scope\n",
+    "    lst_scope_i = [] # Names of factors in scope   \n",
+    "    lst_not_scope = [] # Factors not in scope\n",
+    "    lst_not_scope_i = [] # Names of factors not in scope\n",
+    "\n",
+    "    for i in range(1, len(factors)+1):\n",
+    "        if var in factors[i-1].columns:\n",
+    "            lst_scope.append(factors[i-1])\n",
+    "            lst_scope_i.append(i)\n",
     "        else:\n",
-    "            lst_not_scope.append(factor)\n",
-    "    for elm in lst_scope:\n",
-    "        print(elm.columns)\n",
+    "            lst_not_scope.append(factors[i-1])\n",
+    "            lst_not_scope_i.append(i)\n",
+    "\n",
     "\n",
     "    # Multiply all factors in scope\n",
     "    factor_ = lst_scope[0]\n",
@@ -340,19 +347,15 @@
     "    for i in range(1, len(lst_scope)):\n",
     "        factor_ = factor_product(factor_, lst_scope[i])\n",
     "\n",
-    "    \n",
+    "    if print_info:\n",
+    "        for elm in lst_scope:\n",
+    "            print(elm.columns)\n",
+    "        print(lst_scope_i)\n",
     "\n",
     "    return factor_\n",
     "\n",
-    "sum_product_eliminate_var(factor_list, 10)"
+    "sum_product_eliminate_var(factor_list, 9, True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
